--- a/src/assets/stylesheets/main/extensions/pymdownx/_details.scss
+++ b/src/assets/stylesheets/main/extensions/pymdownx/_details.scss
@@ -38,7 +38,7 @@
   details {
     @extend .admonition;
 
-    display: block;
+    display: flow-root;
     padding-top: 0;
     overflow: visible;
 
